--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     <hr>
 
     <footer>
-        <p>@Copyright (©)</p>
+        <p>@Copyright (©) All Right Reserved</p>
     </footer>
     <hr>
 </body>
